ensured that the modpacks include the java args: "-XX:+UseConcMarkSweepGC -XX:+UseParNewGC"